Fix search modal behind product image

--- a/assets/custom-icletta.css
+++ b/assets/custom-icletta.css
@@ -101,6 +101,9 @@ a:visited {
 
 /* Own search bar in header */
 .icletta-search-modal {
+  position: relative;
+  z-index: 110;
+  
   display: flex;
   align-items: center;
   width: 100%;
